@@ -336,36 +336,36 @@ class SVN:
     #
     
     def has_unversioned(self, path):
-        all_status = self.status_with_cache(path)[:-1]
+        statuses = self.status_with_cache(path)[:-1]
         
-        for status in all_status:
+        for status in statuses:
             if status.data["text_status"] == pysvn.wc_status_kind.unversioned:
                 return True
                 
         return False
     
     def has_added(self, path):
-        all_status = self.status_with_cache(path)[:-1]
+        statuses = self.status_with_cache(path)[:-1]
         
-        for status in all_status:
+        for status in statuses:
             if status.data["text_status"] == pysvn.wc_status_kind.added:
                 return True
                 
         return False
         
     def has_modified(self, path):
-        all_status = self.status_with_cache(path)[:-1]
+        statuses = self.status_with_cache(path)[:-1]
         
-        for status in all_status:
+        for status in statuses:
             if status.data["text_status"] == pysvn.wc_status_kind.modified:
                 return True
         
         return False
 
     def has_deleted(self, path):
-        all_status = self.status_with_cache(path)[:-1]
+        statuses = self.status_with_cache(path)[:-1]
         
-        for status in all_status:
+        for status in statuses:
             if status.data["text_status"] == pysvn.wc_status_kind.deleted:
                 return True
         
@@ -864,27 +864,6 @@ class StatusMonitor():
 
     
     """
-    
-    #: TODO: this is the reverse of C{STATUS} in the svn module and should probably
-    #: be moved there once I figure out what the responsibilities for the svn
-    #: module are.
-    STATUS = {
-        pysvn.wc_status_kind.none:          "none",
-        pysvn.wc_status_kind.unversioned:   "unversioned",
-        pysvn.wc_status_kind.normal:        "normal",
-        pysvn.wc_status_kind.added:         "added",
-        pysvn.wc_status_kind.missing:       "missing",
-        pysvn.wc_status_kind.deleted:       "deleted",
-        pysvn.wc_status_kind.replaced:      "replaced",
-        pysvn.wc_status_kind.modified:      "modified",
-        pysvn.wc_status_kind.merged:        "merged",
-        pysvn.wc_status_kind.conflicted:    "conflicted",
-        pysvn.wc_status_kind.ignored:       "ignored",
-        pysvn.wc_status_kind.obstructed:    "obstructed",
-        pysvn.wc_status_kind.external:      "external",
-        pysvn.wc_status_kind.incomplete:    "incomplete"
-    }
-    
    
     #: A dictionary to keep track of the paths we're watching.
     #: 
@@ -1116,8 +1095,8 @@ class StatusMonitor():
                 return;
         
         # Verifiying the rest of the statuses is common for both files and directories.
-        if status in self.STATUS:
-            self.callback(path, self.STATUS[status])
+        if status in PySVN.STATUS:
+            self.callback(path, PySVN.STATUS[status])
             
             # Now we have to invalidate the parent directories
             while path != "":
@@ -1157,3 +1136,88 @@ class StatusMonitor():
                     # FIXME: if those were just cache hits performance would
                     # be significantly increased.
                     break;
+
+class PySVN():
+    """
+    Used to convert all sorts of PySVN objects to primitives which can be 
+    submitted over the DBus. 
+    """
+    
+    #: TODO: this is the reverse of C{STATUS} in the svn module and should probably
+    #: be moved there once I figure out what the responsibilities for the svn
+    #: module are.
+    STATUS = {
+        pysvn.wc_status_kind.none:          "none",
+        pysvn.wc_status_kind.unversioned:   "unversioned",
+        pysvn.wc_status_kind.normal:        "normal",
+        pysvn.wc_status_kind.added:         "added",
+        pysvn.wc_status_kind.missing:       "missing",
+        pysvn.wc_status_kind.deleted:       "deleted",
+        pysvn.wc_status_kind.replaced:      "replaced",
+        pysvn.wc_status_kind.modified:      "modified",
+        pysvn.wc_status_kind.merged:        "merged",
+        pysvn.wc_status_kind.conflicted:    "conflicted",
+        pysvn.wc_status_kind.ignored:       "ignored",
+        pysvn.wc_status_kind.obstructed:    "obstructed",
+        pysvn.wc_status_kind.external:      "external",
+        pysvn.wc_status_kind.incomplete:    "incomplete"
+    }
+    
+    REVISIONS = {
+        pysvn.opt_revision_kind.unspecified:    "unspecified",
+        pysvn.opt_revision_kind.number:         "number",
+        pysvn.opt_revision_kind.date:           "date",
+        pysvn.opt_revision_kind.committed:      "committed",
+        pysvn.opt_revision_kind.previous:       "previous",
+        pysvn.opt_revision_kind.working:        "working",
+        pysvn.opt_revision_kind.head:           "head"
+    }
+    
+    DEPTHS = {
+        pysvn.depth.empty:      "empty",
+        pysvn.depth.exclude:    "exclude",
+        pysvn.depth.files:      "files",
+        pysvn.depth.immediates: "immediates",
+        pysvn.depth.infinity:   "infinity",
+        pysvn.depth.unknown:    "unknown"
+    }
+    
+    def convert_pysvn_statuses(self, pysvn_statuses):
+        """
+        Converts a list of C{PysvnStatus}es to a dictionary:::
+            
+            {
+                "data": {
+                    "text_status": "normal"
+                    ...
+                }
+            }
+            
+        Sorta...
+        
+        """
+        
+        statuses = []
+        
+        for pysvn_status in pysvn_statuses:
+            data = []
+            for key, value in pysvn_status.data.items():
+                try:
+                    if value == None:
+                        continue
+                    elif isinstance(value, (str, int, unicode)):
+                        data.append((key, value))
+                    elif value in self.STATUS:
+                        data.append((key, self.STATUS[value]))
+                    
+                except TypeError, e:
+                    if str(e) == "unhashable instance":
+                        continue
+                    else:
+                        raise e
+                    
+            statuses.append({
+                "data": dict(data)
+            })
+            
+        return statuses
